WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31712
[Chromium] Ignore line-height CSS property for PushButton
https://bugs.webkit.org/show_bug.cgi?id=31712
Summary
[Chromium] Ignore line-height CSS property for PushButton
Kent Tamura
Reported
2009-11-20 01:02:12 PST
http://crbug.com/20551
LayoutTests/fast/forms/control-restrict-line-height.html checks that the following controls should ignore line-height CSS property, and Chromium/Windows and Chromium/Linux don't ignore it for button and search. - <select> - <input type=button> - <input type=search> This bug addresses the button case.
Attachments
Proposed patch
(2.44 KB, patch)
2009-11-20 01:14 PST
,
Kent Tamura
eric
: review-
Details
Formatted Diff
Diff
Proposed patch (rev.2)
(2.38 KB, patch)
2009-11-23 17:48 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2009-11-20 01:14:33 PST
Created
attachment 43566
[details]
Proposed patch
Eric Seidel (no email)
Comment 2
2009-11-21 07:18:09 PST
Comment on
attachment 43566
[details]
Proposed patch Your ChangeLog should document which tests cover this change. Otherwise this looks fine.
Kent Tamura
Comment 3
2009-11-23 17:48:12 PST
Created
attachment 43744
[details]
Proposed patch (rev.2) * Improved ChangeLog
Kent Tamura
Comment 4
2009-11-23 23:06:37 PST
I forgot to mention that this change didn't break existing LayoutTests.
Eric Seidel (no email)
Comment 5
2009-11-26 21:41:24 PST
Comment on
attachment 43744
[details]
Proposed patch (rev.2) LGTM.
WebKit Commit Bot
Comment 6
2009-11-26 22:00:03 PST
Comment on
attachment 43744
[details]
Proposed patch (rev.2) Clearing flags on attachment: 43744 Committed
r51428
: <
http://trac.webkit.org/changeset/51428
>
WebKit Commit Bot
Comment 7
2009-11-26 22:00:08 PST
All reviewed patches have been landed. Closing bug.
Shinichiro Hamaji
Comment 8
2009-11-27 22:15:23 PST
Committed
r51455
: <
http://trac.webkit.org/changeset/51455
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug