2009-11-26  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel.

        [Chromium] Ignore line-height CSS property specified to push buttons on
        Windows and Linux.
        https://bugs.webkit.org/show_bug.cgi?id=31712

        LayoutTests/fast/forms/control-restrict-line-height.html checks that the
        following controls should ignore line-height CSS property.
         - <select>
         - <input type=button>
         - <input type=search>
        This change addresses the <input type=button> issue with Chromium/Windows
        and Chromium/Linux.

        * rendering/RenderThemeChromiumSkia.cpp: Implement adjustButtonStyle() to ignore line-height.
        * rendering/RenderThemeChromiumSkia.h: Declare adjustButtonStyle().

Canonical link: https://commits.webkit.org/42857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51428 268f45cc-cd09-0410-ab3c-d52691b4dbfc